--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>Sample App</title>
     <style>
+      body {
+        font-family: monospace;
+      }
       div {
         transition: top .3s cubic-bezier(0.4, 0.0, 0.2, 1) 0s, left .3s cubic-bezier(0.4, 0.0, 0.2, 1) 0s
       }
